Improve navigation font and fix side-aligned images in mobile view

--- a/assets/scss/layout/_posts.scss
+++ b/assets/scss/layout/_posts.scss
@@ -1,3 +1,20 @@
 .entry-byline {
 	line-height: 1.28; // vertical center byline beneath avatar
 }
+
+#page {
+	.alignright,
+	.alignleft {
+		img {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			max-width: 100%;
+			width: auto;
+			
+			@media (min-width: 601px) {
+				display: inline;
+			}
+		}
+	}
+}
