--- a/assets/scss/navigation/_navigation.scss
+++ b/assets/scss/navigation/_navigation.scss
@@ -3,6 +3,8 @@
 	
 	a {
 		color: $color__header-link;
+		font-family: $font__family-headline;
+		font-weight: 400;
 		
 		&:hover {
 			color: $color__header-link-active;
